--- a/pom.xml
+++ b/pom.xml
@@ -102,13 +102,26 @@
 		    <artifactId>aws-java-sdk-s3</artifactId>
 		    <version>1.11.238</version>
 		</dependency>
-        <dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-java-sdk-polly</artifactId>
-			<version>1.11.77</version>
-		</dependency>
-		
+		<dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>polly</artifactId>
+        </dependency>
+		<dependency>
+		    <groupId>software.amazon.awssdk</groupId>
+		    <artifactId>s3</artifactId>
+	    </dependency>
 	</dependencies>
+	<dependencyManagement>
+	  <dependencies>
+	    <dependency>
+	      <groupId>software.amazon.awssdk</groupId>
+	      <artifactId>bom</artifactId>
+	      <version>2.17.201</version>
+	      <type>pom</type>
+	      <scope>import</scope>
+	    </dependency>
+	  </dependencies>
+	</dependencyManagement>
 
 	<build>
 		<finalName>aacdict-recent</finalName>
