--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,20 @@
 		    <groupId>software.amazon.awssdk</groupId>
 		    <artifactId>s3</artifactId>
 	    </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-text</artifactId>
+		    <version>1.10.0</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 	  <dependencies>
