[공동구매] 작업 중
* 관리자가 입력하는 공동구매 문의서 기능들

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>dictionary service</description>
 	<properties>
 		<java.version>11</java.version>
+		<sonar.skip>true</sonar.skip>
 	</properties>
 	<dependencies>
 		<dependency>
